Remove InputMethodBase log spam, let keyboard controller be null.

Do not construct a stub InputMethodKeyboardController, check for null.
Also cleanup StubInputController decl and use NOTIMPLEMENTED_LOG_ONCE.

Bug: 881475
Test: No functional changes, less debug log spam.
Change-Id: Ib8db1778f1ae09227bf559f1bb2fe6ac752649d2
Reviewed-on: https://chromium-review.googlesource.com/1222349
Reviewed-by: Shu Chen <shuchen@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592875}
Former-commit-id: 588bebfb18308a30b009816c4d214b6c4263c16b