chrome/browser/ui/views/omnibox/omnibox_view_views.cc
@@ -762,7 +762,8 @@ void OmniboxViewViews::ShowVirtualKeyboardIfEnabled() {
 
 void OmniboxViewViews::HideImeIfNeeded() {
   if (auto* input_method = GetInputMethod()) {
-    input_method->GetInputMethodKeyboardController()->DismissVirtualKeyboard();
+    if (auto* keyboard = input_method->GetInputMethodKeyboardController())
+      keyboard->DismissVirtualKeyboard();
   }
 }
 
