ui/base/ime/input_method_base.cc
@@ -130,7 +130,8 @@ bool InputMethodBase::GetClientShouldDoLearning() {
 void InputMethodBase::ShowVirtualKeyboardIfEnabled() {
   for (InputMethodObserver& observer : observer_list_)
     observer.OnShowVirtualKeyboardIfEnabled();
-  GetInputMethodKeyboardController()->DisplayVirtualKeyboard();
+  if (auto* keyboard = GetInputMethodKeyboardController())
+    keyboard->DisplayVirtualKeyboard();
 }
 
 void InputMethodBase::AddObserver(InputMethodObserver* observer) {
@@ -143,11 +144,6 @@ void InputMethodBase::RemoveObserver(InputMethodObserver* observer) {
 
 InputMethodKeyboardController*
 InputMethodBase::GetInputMethodKeyboardController() {
-  if (!keyboard_controller_) {
-    NOTIMPLEMENTED() << "Using InputMethodKeyboardControllerStub";
-    keyboard_controller_ =
-        std::make_unique<InputMethodKeyboardControllerStub>();
-  }
   return keyboard_controller_.get();
 }
 
